# dynatech-cli

./: README.md  pyproject.toml
dynatech_cli/: cli.py
dynatech_cli/commands/: __init__.py  mapper.py
dynatech_cli/core/: mapper.py
dynatech_cli/exporters/: __init__.py  exporter.py  json_exporter.py  txt_exporter.py  types.py
dynatech_cli/scrapers/: __init__.py  mapper.py
tests/: test_cli.py
