[tool.poetry]
name = "dynatech-cli"
version = "0.1.0"
description = ""
authors = ["Carlos Eduardo Ferreira Fernandes <carlos@dynatech.tec.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ruff = "^0.6.8"
taskipy = "^1.13.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
lint = "ruff check"
pre_test = "task lint"
test = "pytest -s -x --cov=web_mapeper -vv"
post_test = "coverage html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
